# plymouth-openrc-plugin

./: Makefile  README.rst  meson.build  meson.options  plymouth.c
.github/workflows/: gentoo.yml
